# stardict

./: Cargo.toml
