[package]
name = "stardict_lib"
version = "0.2.0"
edition = "2021"
description = "Rust implement stardict"
authors = ["zang.loo"]
homepage = "https://github.com/zangloo/stardict"
repository = "https://github.com/zangloo/stardict.git"
keywords = ["stardict"]
license = "GPL-2.0-only"
readme = "README.md"

[features]
default = []
sqlite = []
sled = []

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.29", optional = true }

[target.'cfg(unix)'.dependencies]
rusqlite = { version = "0.29", optional = true }

[dependencies]
thiserror = "1.0"
flate2 = "1.0"
byteorder = "1.4"
inflate = "0.4"
sled = "0.34"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
process_alive = "0.1"

[lib]
name = "stardict_lib"
path = "src/lib.rs"
crate-type = ["dylib"]
